src/test/deca/context/invalid/provided/testi32.deca
//Resultats :
//Erreur contextuelle
//Ligne 9 : expression type is not a subtype of current class
class A{
    protected int x;
}
class B extends A {
int getX(A a) {
return a.x;
}
}
